# pokemon-and-game-theory

./: LICENSE  README.md
.github/workflows/: deploy.yaml
book/: mkdocs.yaml  pyproject.toml
book/docs/: about.md  basics.md
book/docs/article/: section_1.md  section_2.md  section_3.md  section_4.md  section_5.md
