[project]
name = "introduction-to-modern-cpp"
version = "0.1.0"
description = ""
authors = [
    {name = "Mitama",email = "loligothick@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-markdown-math (>=0.9,<0.10)",
    "pygments (>=2.19.1,<3.0.0)",
    "mkdocs-material (>=9.5.50,<10.0.0)",
    "mkdocs-awesome-pages-plugin (>=2.10.1,<3.0.0)",
    "mkdocs-glightbox (>=0.5.1,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
